--- a/GymaLabs/app.json
+++ b/GymaLabs/app.json
@@ -2,7 +2,7 @@
   "id": "ffb53471-9ae9-49d3-8eaa-88e80288fa8e",
   "name": "GymaLabs",
   "publisher": "Dynamic Technology Partners, Inc.",
-  "version": "2024.04.05.0052",
+  "version": "2024.07.02.0921",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -27,5 +27,6 @@
     "allowDebugging": true,
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
-  }
+  },
+  "runtime": "12.2"
 }
